Margin -1px hack to fix 1px flickering

--- a/app/assets/stylesheets/mixins/_images.css.scss
+++ b/app/assets/stylesheets/mixins/_images.css.scss
@@ -3,7 +3,7 @@
 */
 @mixin block-with-aspect-ratio($aspect-ratio) {
   width: 100%;
-  padding-bottom: percentage(floor(100 / $aspect-ratio) / 100);
+  padding-bottom: percentage(1 / $aspect-ratio);
 }
 
 /**
